	scaling to the recommended max width of 510 pixels.

2003-07-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Add "..." after Merge, Edit Bookmarks, Preferences, 
	and "Show plugin status" menu items. 
	* src/plugins/DescendReport.py: Enable translation for "b." and "d." 
	* doc/gramps-manual/C/gramps-manual.xml: More corrections.

2003-07-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/CustomBookText.py: Add to CVS. 
	* src/plugins/ReadPkg.py: Enable "..." in the menu item.
	* src/plugins/ReadNative.py: Likewise.
	* src/plugins/ReadGedcom.py: Likewise.
	* src/Report.py: Put "Style" label in singular form (was plural).
	* src/plugins/WritePkg.py: Enable "..." in the menu item.
	* src/plugins/WriteCD.py: Likewise.
	* src/plugins/WriteGedcom.py: Likewise.
	* src/plugins/ReadPkg.py: Remove "..." (move this to Plugins.py).
	* src/plugins/ReadNative.py: Likewise.
	* src/plugins/ReadGedcom.py: Likewise.
	* src/plugins/WritePkg.py: Likewise.
	* src/plugins/WriteCD.py: Likewise.
	* src/plugins/WriteGedcom.py: Likewise.
	* src/Plugins.py: Add "..." at menu generation.
	* src/edit_person.glade: Add colon after "Type" label.
	* src/dialog.glade: Add accelerator to "Address" label of AddrEdit.
	* src/po/template.po: Update the above corrections in template.
	* src/plugins/Makefile.am: Ship CustomBookText.py.
	* src/plugins/FtmStyleAncestors.py: Fix coma-separation for endnotes. 
	Translate "Endnotes" sub-heading. Enable pagebreak only when 
	generation > 1 (was 0).
	* src/plugins/FtmStyleDescendants.py: Likewise. 
	* src/const.py.in: Make the confidence order high to low (was l->h).
	* src/plugins/AncestorChart.py: Enable translation for "b." and "d."
	* src/plugins/DesGraph.py: Likewise.
	* src/po/template.po: Update the above corrections in template.
	* src/GrampsCfg.py: Toolbar and statusbar (single word each). 
	* src/preferences.glade: Statusbar (single word).
	* doc/gramps-manual/C/gramps-manual.xml: More corrections.
