@@ -56,7 +56,7 @@
 	      <child>
 		<widget class="GtkLabel" id="name_label">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Book _name: </property>
+		  <property name="label" translatable="yes">Book _name:</property>
 		  <property name="use_underline">True</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
